@@ -757,7 +757,8 @@ about.text.contributors=Slava Pestov\n\
 	Will Varfar\n\
 	Wiktor Adamski\n\
 	Wojciech Stryjewski\n\
-	Wolfgang Chico-Töpfer
+	Wolfgang Chico-Töpfer\n\
+	Yihua Zhang
 #}}}
 
 #{{{ Search and replace dialog
